--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -64,7 +64,12 @@
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
-
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+    padding: 5px 12px;
+}
 .loading,
 .clear {
     position: absolute;
