--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -7,6 +7,7 @@
     //default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --white: #fff;
 }
 * {
     margin: 0;
