--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,7 +6,7 @@
     min-width: 100px;
     padding: 9px 16px;
     border-radius: 4px;
-
+    font-family: 'ProximaNova', sans-serif;
     cursor: pointer; //chuyển đổi hình dáng của chuột khi đưa chuột đến vị trí của nó
     background-color: var(--white);
     user-select: none;
