--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -15,6 +15,10 @@
     border-radius: 0;
     padding: 11px 16px;
     line-height: 1.8rem;
+    font-weight: 600;
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, 0.13);
+    }
     &:hover {
         background: rgba(22, 24, 35, 0.03);
     }
